tools/ncp-local-cluster/apps/control-plane-endpoints/grpcroute-nvct-api.yaml
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: nvct-api-control-plane-grpc
  namespace: nvcf
spec:
  hostnames:
    - nvct-api.nvcf.svc.cluster.local
  parentRefs:
    - name: api-grpc-gw
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - backendRefs:
        - name: nvct-api
          port: 9090
