tools/ncp-local-cluster/apps/control-plane-endpoints/httproute-reval.yaml
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reval-control-plane
  namespace: nvcf
spec:
  hostnames:
    - reval.nvcf-control-plane.test
    - reval.nvcf.svc.cluster.local
  parentRefs:
    - name: shared-gw
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - backendRefs:
        - name: reval
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
