tools/ncp-local-cluster/apps/control-plane-endpoints/httproute-sis.yaml
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sis-control-plane
  namespace: sis
spec:
  hostnames:
    - sis.nvcf-control-plane.test
    - api.sis.svc.cluster.local
  parentRefs:
    - name: shared-gw
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - backendRefs:
        - name: api
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
